[package]
name = "crag"
version = "0.4.1"
edition = "2021"
authors = ["mlsvrts <mlsvrts@protonmail.com>"]
description = "Search from the command line"
readme = "README.md"
repository = "https://github.com/mlsvrts/crag"
license = "MIT"
keywords = ["cli", "google", "search", "productivity"]
categories = ["command-line-utilities", "web-programming"]

[badges]
maintenance = { status = "actively-developed" }

# Library Dependencies:

# Make requests to web APIs
# json: Support decoding json responses via serde_json
[dependencies.ureq]
version = "2.6"
features = ["json"]

# Support storing search source urls as a Url type
[dependencies.url]
version = "2.3"

[lib]
name = "crag"
path = "src/lib.rs"

# CLI Dependencies:

# Generating the command line GUI
# derive: Enables the custom derive macro
# unicode: Support for unicode in arguments
# wrap_help: Wrap help messages based on terminal size
# env: Support parsing unused arguments from environment variables
[dependencies.clap]
version = "4.0"
optional = true
features = ["derive", "unicode", "wrap_help", "env"]

# Support colored terminal output
[dependencies.colored]
optional = true
version = "2"

[features]
cli = ["clap", "colored"]

[[bin]]
name = "crag"
path = "src/main.rs"
required-features = ["cli"]
